--- a/addons/hr/views/res_users.xml
+++ b/addons/hr/views/res_users.xml
@@ -231,7 +231,7 @@
             <field name="res_model">res.users</field>
             <field name="view_mode">form</field>
             <field name="context">{'from_my_profile': True}</field>
-            <field name="view_id" ref="hr.res_users_view_form_profile"/>
+            <field name="view_id" ref="hr.res_users_view_form_profile"/> <!-- res_users_view_form_simple_modif res_users_view_form_profile -->
         </record>
 
         <record id="hr_employee_action_from_user" model="ir.actions.act_window">
