--- a/odoo/addons/base/views/res_users_views.xml
+++ b/odoo/addons/base/views/res_users_views.xml
@@ -449,7 +449,7 @@
                     <field name="avatar_128" invisible="1"/>
                     <field name="image_1920" readonly="0" widget='image' class="oe_right oe_avatar" options='{"preview_image": "avatar_128"}'/>
                     <h1>
-                        <field name="name" readonly="1" class="oe_inline"/>
+                        <field name="name" readonly="1" class="oe_inline" groups="mrm_product.mrm_group_mdt_display_user"/>
                     </h1>
                     <notebook>
                         <page string="Preferences" name="preferences_page">
